--- a/doc/latex/cx16-file_8h.tex
+++ b/doc/latex/cx16-file_8h.tex
@@ -2,8 +2,7 @@
 \label{cx16-file_8h}\index{inc/cx16-\/file.h@{inc/cx16-\/file.h}}
 {\ttfamily \#include $<$cx16.\+h$>$}\newline
 {\ttfamily \#include $<$mos6522.\+h$>$}\newline
-Include dependency graph for cx16-\/file.h\+:
-\nopagebreak
+Include dependency graph for cx16-\/file.h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -75,8 +74,7 @@ Close a file.
 \item other\+: OK! The last pointer between 0x\+A000 and 0x\+BFFF is returned. Note that the last pointer is indicating the first free byte. 
 \end{DoxyItemize}
 \end{DoxyReturn}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -105,8 +103,7 @@ Load a file to ram or (banked ram located between address 0x\+A000 and 0x\+BFFF)
 \begin{DoxyReturn}{Returns}
 ptr the pointer advanced to the point where the stream ends. 
 \end{DoxyReturn}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -145,8 +142,7 @@ bram\+\_\+ptr\+\_\+t
 \item other\+: OK! The last pointer between 0x\+A000 and 0x\+BFFF is returned. Note that the last pointer is indicating the first free byte. 
 \end{DoxyItemize}
 \end{DoxyReturn}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -181,8 +177,7 @@ Load a file to banked ram located between address 0x\+A000 and 0x\+BFFF incremen
 \item other\+: OK! The last pointer between 0x\+A000 and 0x\+BFFF is returned. Note that the last pointer is indicating the first free byte. 
 \end{DoxyItemize}
 \end{DoxyReturn}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
