--- a/doc/latex/index.tex
+++ b/doc/latex/index.tex
@@ -3,7 +3,7 @@ Sven Van de Velde (\href{mailto:sven.van.de.velde@telenet.be}{\texttt{ sven.\+va
 \end{DoxyAuthor}
 Please find below some technical details how this flash ROM utility works, for those who are interested.
 
-This flash utility can be used to flash a new ROM.\+BIN into ROM banks of the COMMANDER X16. ROM upgrades for he CX16 will come as ROM.\+BIN files, and will probably be downloadable from a dedicated location. ~\newline
+This flash utility can be used to flash a new ROM.\+BIN into ROM banks of the COMMANDER X16. ROM upgrades for the CX16 will come as ROM.\+BIN files, and will probably be downloadable from a dedicated location. ~\newline
  Because the ROM.\+BIN files are significantly large binaries, ROM flashing will only be possible from the SD card. Therefore, this utility follows a simple and lean upload and flashing design, keeping it as simple as possible. The utility program is to be placed onto a folder on the SD card, together with the ROM.\+BIN file. The user can then simply load the program and run it from the SD card folder to flash the ROM.
 
 The main principles of ROM flashing is to {\bfseries{unlock the ROM}} for flashing following pre-\/defined read/write sequences defined by the manufacturer of the chip. Once these sequences have been correctly initiated, a byte can be written at a specified ROM address. And this is where it got tricky and interesting concerning the COMMANDER X16 ~\newline
